tests/conflict_markers_other_file.sy
use conflict_markers

start :: fn do end

// error: GitConflictError
